src/main/java/com/example/gachoncrpytouserservice/global/error/exception/BusinessException.java
package com.example.gachoncrpytouserservice.global.error.exception;

import com.example.gachoncrpytouserservice.global.error.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException {
    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }
}
